fixed take and miss button alignment

--- a/src/layout_jason.css
+++ b/src/layout_jason.css
@@ -17,6 +17,12 @@
 	background-color: #EEEEEE;
 }
 
+#olddrugs{
+	overflow: scroll;
+	background-color: #EEEEEE;
+	height: 390px;
+}
+
 #actionbar{
 	display: none;
 }
